suggestions box alignment safari bug

--- a/themes/modern-calligraphy-studio/app.css
+++ b/themes/modern-calligraphy-studio/app.css
@@ -12684,6 +12684,8 @@ footer .end-credits a:hover {
 #suggestionsBox form p {
   width: 352px;
   max-width: 100%;
+  display: flex;
+  justify-content: center;
 }
 
 #suggestionsBox form p label {
