--- a/themes/modern-calligraphy-studio/src/sass/_footer.scss
+++ b/themes/modern-calligraphy-studio/src/sass/_footer.scss
@@ -151,6 +151,8 @@ footer {
     p {
       width: 352px;
       max-width: 100%;
+      display: flex;
+      justify-content: center;
 
       label {
         max-width: 100%;
